--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>snake.js</title>
   </head>
   <body>
-    <div id="canvas-div"></div>
-    <button id="start-btn">START</button>
+    <div class="col-1">
+      <div id="canvas-div"></div>
+      <button id="start-btn">START</button>
+      <button id="mode-btn">MODE: EASY</button>
+    </div>
+    <div class="col-2">
+      <ul class="score">
+        <li id="score-counter">SCORE: 0</li>
+        <li class="score-item">0</li>
+        <li class="score-item">0</li>
+        <li class="score-item">0</li>
+      </ul>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
