added storing previous best scores locally and did some cleaning for the code

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="col-2">
       <ul class="score">
         <li id="score-counter">SCORE: 0</li>
+        <li>PERSONAL BEST:</li>
         <li class="score-item">0</li>
         <li class="score-item">0</li>
         <li class="score-item">0</li>
